Update ContactList.java